[gd_scene load_steps=3 format=3 uid="uid://bwx4h8k2m5pqr"]

[ext_resource type="Script" path="res://scripts/ui/DiceRollScreen.gd" id="1_script"]
[ext_resource type="Resource" uid="uid://dtfg2ntfkn5oa" path="res://styles/HUDStyle.tres" id="2_style"]

[node name="DiceRollScreen" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")
style = ExtResource("2_style")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DiceRangeLabel" type="Label" parent="Root"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
text = "Dice Range: 5-12"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RollingNumberLabel" type="Label" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BossNameLabel" type="Label" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = 100.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
text = "Boss A (Placeholder)"
horizontal_alignment = 1
vertical_alignment = 1
